Steps for first recipe added

--- a/recipes/moimoi.html
+++ b/recipes/moimoi.html
@@ -29,17 +29,31 @@
     </p>
 
     <h3>Ingredients</h3>
-    <ul>
-        <li>1 cup peeled beans</li>
-        <li>1/4 medium onion (halved)</li>
-        <li>1 red pepper</li>
-        <li>Peeled ginger</li>
-        <li>1 spring green onion</li>
-        <li>2 boiled eggs</li>
-        <li>1 tablespoon oil or butter</li>
-        <li>1 cube maggi</li>
-        <li>1/4 teaspoon pepper flakes</li>
-        <li>1/2 teaspoon of salt</li>
-    </ul>
+        <ul>
+            <li>1 cup peeled beans</li>
+            <li>1/4 medium onion (halved)</li>
+            <li>1 red pepper</li>
+            <li>Peeled ginger</li>
+            <li>1 spring green onion</li>
+            <li>2 boiled eggs</li>
+            <li>1 tablespoon oil or butter</li>
+            <li>1 cube maggi</li>
+            <li>1/4 teaspoon pepper flakes</li>
+            <li>1/2 teaspoon of salt</li>
+        </ul>
+
+    <h3>Steps</h3>
+
+        <ol>
+            <li>Preheat oven to 350F</li>
+            <li>In a blender, combine beans, onion, 1 part red pepper, 1 part onion, 1/2 cup water and ginger. Puree to a fine paste</li>
+            <li>Chop left over pepper and onion. Slice up the egg and mince the green onion if using. Set aside.</li>
+            <li>Melt butter. Add in maggi, salt, pepper flakes. Stir to combine. Add in pureed beans and raw egg. Mix well using a mixing pin or hand mixer (3-5 minutes).</li>
+            <li>Line an oven tray with culinary parchment (or aluminum foil). Pour in the moimoi batter and spread out evenly. Shake pan gently to distribute. Top with chopped ingredients.</li>
+            <li>Bake moimoi for 15 minutes (until lifted at the edges and set).</li>
+            <li>As soon as you remove the moimoi from the oven, start the roll. Starting at one short end, peel off parcment until rolled to the end.</li>
+            <li>This recipe also works extremely well for plantain rollup. Substitute 2 medium ripe plantains for beans, keep everything else the same.</li>
+        </ol>
+
 </body>
 </html>
