Listed Ingredients for second recipe

--- a/recipes/argiros_falafel.html
+++ b/recipes/argiros_falafel.html
@@ -30,5 +30,23 @@
         This means early forms of falafel were enjoyed in this region since biblical times, at least. 
         That’s some pretty ancient falafel!
     </p>
+
+    <h3>Ingredients</h3>
+
+    <ul>
+        <li>250g chickpeas soaked</li>
+        <li>1 onion</li>
+        <li>1 clove garlic</li>
+        <li>1/2 bunch parsley</li>
+        <li>1/2 bunch fresh coriander</li>
+        <li>1/2 teaspoon soda</li>
+        <li>1/2 teaspoon cumin</li>
+        <li>1/2 teaspoon hot paprika</li>
+        <li>2 tablespoon balsamic vinegar with honey</li>
+        <li>salt</li>
+        <li>pepper</li>
+        <li>Olive oil for the pan</li>
+        <li>3 1/2 tablespoon flour</li>
+    </ul>
 </body>
 </html>
