Steps listed for second recipe

--- a/recipes/argiros_falafel.html
+++ b/recipes/argiros_falafel.html
@@ -33,20 +33,32 @@
 
     <h3>Ingredients</h3>
 
-    <ul>
-        <li>250g chickpeas soaked</li>
-        <li>1 onion</li>
-        <li>1 clove garlic</li>
-        <li>1/2 bunch parsley</li>
-        <li>1/2 bunch fresh coriander</li>
-        <li>1/2 teaspoon soda</li>
-        <li>1/2 teaspoon cumin</li>
-        <li>1/2 teaspoon hot paprika</li>
-        <li>2 tablespoon balsamic vinegar with honey</li>
-        <li>salt</li>
-        <li>pepper</li>
-        <li>Olive oil for the pan</li>
-        <li>3 1/2 tablespoon flour</li>
-    </ul>
+        <ul>
+            <li>250g chickpeas soaked</li>
+            <li>1 onion</li>
+            <li>1 clove garlic</li>
+            <li>1/2 bunch parsley</li>
+            <li>1/2 bunch fresh coriander</li>
+            <li>1/2 teaspoon soda</li>
+            <li>1/2 teaspoon cumin</li>
+            <li>1/2 teaspoon hot paprika</li>
+            <li>2 tablespoon balsamic vinegar with honey</li>
+            <li>salt</li>
+            <li>pepper</li>
+            <li>Olive oil for the pan</li>
+            <li>3 1/2 tablespoon flour</li>
+        </ul>
+
+    <h3>Steps</h3>
+
+    <ol>
+        <li>A day ahead soak chickpeas in plenty of water until they swell. 
+            Next drain and mash in blender.</li>
+        <li>Put mash in a bowl.</li>
+        <li>Puree the onion, garlic, parsley, coriander, baking soda, flour and spices for the seasoning.</li>
+        <li>Then add the chickpeas; add the balsamic vinegar with honey and mix using a spoon. With the spoon, take a tablespoon of mixture. I like to make them Greek style, as large meatballs in a flat shape. Put in greased baking pan and brush them with olive oil.</li>
+        <li>Bake in a well preheated oven 200ºC, for 15 minutes; turn over and continue baking for 10 minutes or until extra golden.</li>
+        <li>Serve with Arabic bread, yogurt, lettuce and the fresh tomatoes.</li>
+    </ol>
 </body>
 </html>
