Steps for third recipe added

--- a/recipes/mexican_brown_rice_and_beans.html
+++ b/recipes/mexican_brown_rice_and_beans.html
@@ -32,17 +32,30 @@
 
     <h3>Ingredients</h3>
 
-    <ul>
-        <li>1 teaspoon olive oil</li>
-        <li>1/2 large Vidalia or other sweet onion, chopped</li>
-        <li>1/2 yellow bell pepper, chopped</li>
-        <li>One half of a 15-oz can of black beans, rinsed and drained</li>
-        <li>2 cups prepared mild salsa</li>
-        <li>2 cups cooked brown rice</li>
-        <li>1/4 teaspoon cinnamon (if you are unsure about this ingredient, start with 1/8 teaspoon)</li>
-        <li>1/2 teaspoon cumin</li>
-        <li>1/2 teaspoon chili powder</li>
-        <li>1 teaspoon smoked paprika</li>
-    </ul>
+        <ul>
+            <li>1 teaspoon olive oil</li>
+            <li>1/2 large Vidalia or other sweet onion, chopped</li>
+            <li>1/2 yellow bell pepper, chopped</li>
+            <li>One half of a 15-oz can of black beans, rinsed and drained</li>
+            <li>2 cups prepared mild salsa</li>
+            <li>2 cups cooked brown rice</li>
+            <li>1/4 teaspoon cinnamon (if you are unsure about this ingredient, start with 1/8 teaspoon)</li>
+            <li>1/2 teaspoon cumin</li>
+            <li>1/2 teaspoon chili powder</li>
+            <li>1 teaspoon smoked paprika</li>
+        </ul>
+
+
+    <h3>Steps</h3>
+
+        <ol>
+            <li>In a large nonstick saucepan, heat the olive oil over medium heat.</li>
+            <li>Add the chopped onion and bell pepper, and sauté until softened, about 3-4 minutes.</li>
+            <li>Add the garlic and sauté for 1 minute more.</li>
+            <li>Add the salsa, black beans, and spices and let bubble for 2-3 minutes.</li>
+            <li>Add the rice, reduce heat to medium-low, and heat through (about 5 minutes). The mixture should be moist but not runny.</li>
+            <li>Add additional salsa (or just water) if needed.</li>
+            <li>Remove from heat and finish with your choice of toppings (jalapeno, avocado, cheddar, hot sauce, etc.)</li>
+        </ol>
 </body>
 </html>
