Links to Home page added

--- a/recipes/argiros_falafel.html
+++ b/recipes/argiros_falafel.html
@@ -60,5 +60,7 @@
         <li>Bake in a well preheated oven 200ºC, for 15 minutes; turn over and continue baking for 10 minutes or until extra golden.</li>
         <li>Serve with Arabic bread, yogurt, lettuce and the fresh tomatoes.</li>
     </ol>
+
+    <a href="../index.html">Home page</a>
 </body>
 </html>
