--- a/recipes/mexican_brown_rice_and_beans.html
+++ b/recipes/mexican_brown_rice_and_beans.html
@@ -57,5 +57,7 @@
             <li>Add additional salsa (or just water) if needed.</li>
             <li>Remove from heat and finish with your choice of toppings (jalapeno, avocado, cheddar, hot sauce, etc.)</li>
         </ol>
+
+        <a href="../index.html">Home page</a>
 </body>
 </html>
