--- a/recipes/moimoi.html
+++ b/recipes/moimoi.html
@@ -55,5 +55,7 @@
             <li>This recipe also works extremely well for plantain rollup. Substitute 2 medium ripe plantains for beans, keep everything else the same.</li>
         </ol>
 
+        <a href="../index.html">Home page</a>
+
 </body>
 </html>
